--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: perl
 perl:
+   - "blead"
+   - "5.20"
    - "5.18"
    - "5.16"
    - "5.14"
    - "5.12"
    - "5.10"
    - "5.8"
+
+matrix:
+   allow_failures:
+      - perl: 'blead'
 
 install:
    - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
