--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ perl:
    - "5.12"
    - "5.10"
    - "5.8"
+   - "5.6"
 
 matrix:
    include:
@@ -15,7 +16,8 @@ matrix:
         env: COVERAGE=1      
    allow_failures:
       - perl: "blead"
-
+      - perl: "5.6"
+      
 before_install:
    - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
    - source ~/travis-perl-helpers/init
