removed debug module and warnings::fatal_warnings check
warnings::fatal_warnings doesnt seem to work on older perls

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_script:
    - coverage-setup
 
 script:
-   - prove -lrsv -j$((SYSTEM_CORES + 1)) $(test-dirs) t
+   - prove -lrsv -j$((SYSTEM_CORES + 1)) $(test-dirs)
 
 after_success:
    - coverage-report
