Show unzip version

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
    - source ~/travis-perl-helpers/init
    - build-perl
    - perl -V
+   - unzip -h
    - build-dist
    - cd $BUILD_DIR             
 
