Update unzip version

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ before_install:
    - source ~/travis-perl-helpers/init
    - build-perl
    - perl -V
+   - apt-get -qq update
+   - apt-get -qq install unzip
    - unzip -h
    - build-dist
    - cd $BUILD_DIR             
